# franka_cutting

./: .setup_assistant  CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  franka_control_node.yaml  franka_cutting.srdf  franka_cutting.srdf.xacro  franka_cutting_arm.srdf.xacro
launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  franka_control.launch  franka_cutting_moveit.launch  franka_cutting_moveit_controller_manager.launch.xml  franka_cutting_moveit_sensor_manager.launch.xml  franka_gripper.launch  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  my_connect.launch  ompl_planning_pipeline.launch.xml  panda_gripper_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
matlab_scripts/: m-file1.m  m-file2.m  m-file3.m  maximum.m  mean_force.m  varince_force.m
scripts/: bagtest.py  choping.py  chopping.py  current_pose.py  important_comands.py  move_group_python_interface_tutorial.py  plan_cartesian_path.py  pressing.py  pressing_and_slicing.py  sawing (copy).py  sawing.py  slicing.py  test.py  test_joint.py
urdf/: franka.launch  franka_cutting_arm_setup.urdf.xacro  franka_cutting_setup.urdf.xacro  franka_cutting_setup.xacro  test.launch  test.urdf  test1.urdf
